--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -248,6 +248,13 @@ input[type="number"] {
   outline: none;
 }
 
+.cash-app {
+  text-align: center;
+  margin-top: 10px;
+  display: block;
+  font-size: 0.8em;
+}
+
 .legalese {
   margin-top: 15px;
   font-size: 0.8em;
