--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -115,7 +115,9 @@ p {
   margin-bottom: 15px;
   width: 100px;
   height: 100px;
-  background-size: 100px;
+  background-size: auto 100px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .team-head.tj {
