--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -34,6 +34,17 @@ html, body {
 .group:after { clear:both;}
 .group { zoom:1; /* For IE 6/7 */ }
 
+/*  GRID OF THREE  */
+.span_3_of_3 { width: 100%; }
+.span_2_of_3 { width: 66.13%; }
+.span_1_of_3 { width: 32.26%; }
+
+/*  GO 50% WIDTH BELOW 480 PIXELS */
+@media only screen and (max-width: 480px) {
+	.col {  margin: 1% 0 1% 0%; }
+	.span_3_of_3, .span_2_of_3, .span_1_of_3 { width: 100%; }
+}
+
 /*  GRID OF FOUR  */
 .span_4_of_4 {
 	width: 100%;
@@ -82,7 +93,8 @@ html, body {
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 480px) {
 	.col {  margin: 1% 0 1% 0%; }
-	.span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
+  .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
+  .span_1_of_6 { width: 33.333%; margin-bottom: 20px; }
 }
 
 /* Actual good styles */
@@ -134,6 +146,14 @@ p {
 
 .team-head.justin {
   background-image: url("/assets/img/team/justin.png");
+}
+
+.team-head.cayla {
+  background-image: url("/assets/img/team/cayla.png");
+}
+
+.team-head.james {
+  background-image: url("/assets/img/team/james.png");
 }
 
 a {
@@ -265,4 +285,14 @@ input[type="number"] {
 
 .legalese ul {
   margin: 5px 0;
+}
+
+.skip-to-donate {
+  display: none;
+  text-align: center;
+  width: 100%;
+}
+
+@media only screen and (max-width: 480px) {
+	.skip-to-donate { display: block }
 }
